--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: white;
   margin: 0;
   padding: 0;
 }
 
 .container {
   width: 90%;
-  max-width: 500px;
+  max-width: 100%;
   margin: 50px auto;
   background: #fff;
   padding: 20px;
@@ -35,3 +35,4 @@ button:hover {
 }
 
 #scanNikBtn{width:100%;margin-top:6px}
+
